Fixed sticky footer; only new-wish-button full-width on mobile, why?

--- a/app/style.css
+++ b/app/style.css
@@ -1,5 +1,24 @@
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
 body {
+  display: flex;
+  flex-direction: column;
   font-size: clamp(32px, 4vw + 1rem, 24px);
+}
+
+.page-container {
+  display: flex;
+  flex-direction: column;
+  flex: 1 0 auto;
+}
+
+.container.is-max-desktop {
+  flex: 1 0 auto;
+  width: 100%;
+  max-width: none;
 }
 
 .content {
@@ -24,4 +43,10 @@ body {
 
 p {
   text-align: center;
+}
+
+.notifications,
+.notification {
+  padding: 0;
+  margin: 0;
 }
